<resources>
    <string name="app_name" translatable="false">FMT Reversi</string>

    <!-- invariant string -->
    <string name="logo_description">logo</string>
    <string name="match_player1_score_description">player1 score</string>
    <string name="match_player2_score_description">player2 score</string>
    <string name="match_selector_decription">selector</string>
    <string name="activity_title">FMT Reversi</string>
    <string name="OK">OK</string>
    <string name="default_player1_name">Player 1</string>
    <string name="default_player2_name">Player 2</string>
    <string name="match_player1_cpu">CPU</string>
    <string name="match_player2_cpu">CPU</string>

    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="action_check">Check Backend</string>
    <string name="action_played_matches">Played matches</string>
    <string name="action_demo">Demo</string>
    <string name="action_clear_played_matches_history">Delete all</string>

    <!-- launcher -->
    <string name="launcher_cpu_vs_player2">CPU vs Player 2</string>
    <string name="launcher_player1_vs_player2">Player 1 vs Player 2</string>
    <string name="launcher_player1_vs_CPU2">Player 1 vs CPU</string>
    <string name="launcher_cpu_vs_cpu">CPU vs CPU</string>
    <string name="launcher_player_vs_network">player vs remote player</string>

    <!-- played matches -->
    <string name="played_match_no_data">No matches found</string>

    <!-- Player label -->
    <string name="match_player1_human_description">Player 1</string>
    <string name="match_player2_human_description">Player 2</string>

    <string name="player_network">Remote</string>
    <string name="please_wait">Please wait</string>

    <!-- Strings used for fragments for navigation -->
    <string name="played_matches_label">Played matches</string>

    <!-- preferences -->
    <string name="prefs_network_category">Network</string>
    <string name="prefs_network_player_title">Network player name</string>
    <string name="prefs_network_player_summary">Player name during network matches</string>
    <string name="prefs_network_category_summary">Preferences for network matches</string>
    <string name="prefs_local_category">Local</string>
    <string name="prefs_local_player1_title">Player 1 name</string>
    <string name="prefs_local_player2_title">Player 2 name</string>
    <string name="prefs_local_category_summary">Preference for local match</string>
    <string name="prefs_local_player1_summary">Player 1 name during local matches</string>
    <string name="prefs_local_player2_summary">Player 2 name during local matches</string>
    <string name="prefs_local_cpu_random">Random choice</string>
    <string name="prefs_local_cpu_simple">Get first choice</string>

    <!-- dialogs -->
    <string name="dialgo_error_title">Error</string>
    <string name="dialog_error_message">There was an error during match. The match is terminated.</string>
    <string name="prefs_local_cpu_type">CPU Type</string>
    <string name="play_another_game">Play another game</string>
    <string name="back_to_board">Return to board</string>
    <string name="dialog_delete_confirmation_title">Delete confirmation</string>
    <string name="dialog_delete_confirmation_message">You are about to delete all records of database. Do you really want to proceed?</string>
    <string name="dialog_delete_confirmed_message">All previous game data has been cleared</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>



</resources>
