<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_played_matches"
        android:icon="@drawable/ic_played_matches_24"
        android:orderInCategory="100"
        android:title="@string/action_played_matches"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_check"
        android:icon="@drawable/ic_backend_check_24"
        android:orderInCategory="300"
        android:title="@string/action_check"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_demo"
        android:orderInCategory="400"
        android:title="@string/action_demo"
        app:showAsAction="never" />
</menu>
